libs/bassmidi-2.4.12.0/vb/bassmidi.bas


Declare Function BASS_MIDI_FontInit Lib "bassmidi.dll" (ByVal file As Any, ByVal flags As Long) As Long
Declare Function BASS_MIDI_FontInitUser Lib "bassmidi.dll" (ByVal procs As Long, ByVal user As Long, ByVal flags As Long) As Long
Declare Function BASS_MIDI_FontFree Lib "bassmidi.dll" (ByVal handle As Long) As Long
Declare Function BASS_MIDI_FontGetInfo Lib "bassmidi.dll" (ByVal handle As Long, ByRef info As BASS_MIDI_FONTINFO) As Long
Declare Function BASS_MIDI_FontGetPresets Lib "bassmidi.dll" (ByVal handle As Long, ByRef presets As Long) As Long
Declare Function BASS_MIDI_FontGetPreset Lib "bassmidi.dll" (ByVal handle As Long, ByVal preset As Long, ByVal bank As Long) As Long
Declare Function BASS_MIDI_FontLoad Lib "bassmidi.dll" (ByVal handle As Long, ByVal preset As Long, ByVal bank As Long) As Long
Declare Function BASS_MIDI_FontUnload Lib "bassmidi.dll" (ByVal handle As Long, ByVal preset As Long, ByVal bank As Long) As Long
Declare Function BASS_MIDI_FontCompact Lib "bassmidi.dll" (ByVal handle As Long) As Long
Declare Function BASS_MIDI_FontPack Lib "bassmidi.dll" (ByVal handle As Long, ByVal outfile As String, ByVal encoder As String, ByVal flags As Long) As Long
Declare Function BASS_MIDI_FontUnpack Lib "bassmidi.dll" (ByVal handle As Long, ByVal outfile As String, ByVal flags As Long) As Long
Declare Function BASS_MIDI_FontSetVolume Lib "bassmidi.dll" (ByVal handle As Long, ByVal handle As Single) As Long
Declare Function BASS_MIDI_FontGetVolume Lib "bassmidi.dll" (ByVal handle As Long) As Single

Declare Function BASS_MIDI_ConvertEvents Lib "bassmidi.dll" (ByVal data As Long, ByVal length As Long, events As Any, ByVal count As Long, ByVal flags As Long) As Long

Declare Function BASS_MIDI_InGetDeviceInfo Lib "bassmidi.dll" (ByVal device As Long, ByRef info As BASS_MIDI_DEVICEINFO) As Long
Declare Function BASS_MIDI_InInit Lib "bassmidi.dll" (ByVal device As Long, ByVal proc As Long, ByVal user As Long) As Long
Declare Function BASS_MIDI_InFree Lib "bassmidi.dll" (ByVal device As Long) As Long
Declare Function BASS_MIDI_InStart Lib "bassmidi.dll" (ByVal device As Long) As Long
Declare Function BASS_MIDI_InStop Lib "bassmidi.dll" (ByVal device As Long) As Long

' 32-bit wrappers for 64-bit BASS functions
Function BASS_MIDI_StreamCreateFile(ByVal mem As Long, ByVal file As Long, ByVal offset As Long, ByVal length As Long, ByVal flags As Long, ByVal freq As Long) As Long
BASS_MIDI_StreamCreateFile = BASS_MIDI_StreamCreateFile64(mem, file, offset, 0, length, 0, flags Or BASS_UNICODE, freq)
End Function

' callback functions
Function MIDIFILTERPROC(ByVal handle As Long, ByVal track As Long, ByRef event_ As BASS_MIDI_EVENT, ByVal seeking As Long, ByVal user As Long) As Long

    'CALLBACK FUNCTION !!!
    
    ' Event filtering callback function.
    ' handle : MIDI stream handle
    ' track  : Track containing the event
    ' event_ : The event
    ' seeking: BASSTRUE = the event is being processed while seeking, BASSFALSE = it is being played
    ' user   : The 'user' parameter value given when calling BASS_MIDI_StreamSetFilter
    ' RETURN : BASSTRUE = process the event, BASSFALSE = drop the event

End Function

Sub MIDIINPROC(ByVal device As Long, ByVal time As Double, ByVal buffer As Long, ByVal length As Long, ByVal user As Long)
    
    'CALLBACK FUNCTION !!!
    
    ' MIDI input callback function
    ' device : MIDI input device
    ' time   : Timestamp
    ' buffer : Buffer containing MIDI data
    ' length : Number of bytes of data
    ' user   : The 'user' parameter value given when calling BASS_MIDI_InInit
    
End Sub
